<resources>
    <string name="app_name">TrasteApp</string>
    <string name="default_web_client_id">742420112621-crgfan6m793pnlk9rutumil4opplsush.apps.googleusercontent.com</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="no_tienes_cuenta_reg_strate">¿No tienes cuenta? Regístrate</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="correo_electr_nicoR">Correo electrónico</string>
    <string name="contrase_aR">Contraseña</string>
    <string name="confirmar_contrase_aR">Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="bienvenido_a_trasteapp">Bienvenido a TrasteApp</string>
    <string name="buscar_trastero">Buscar Trastero</string>
    <string name="facturas">Facturas</string>
    <string name="contratos">Contratos</string>
    <string name="ayuda_con_portes">Ayuda con Portes</string>
    <string name="atenci_n_al_cliente">Atención al Cliente</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="ciudad">Ciudad</string>
    <string name="descripci_n">Descripción</string>
    <string name="precio">Precio</string>
    <string name="reservar_trastero">Reservar trastero</string>
    <string name="cancelar">Cancelar</string>
    <string name="ciudad_y_descripci_n">Ciudad y descripción</string>
    <string name="imagen_del_trastero">Imagen del trastero</string>
    <string name="precioContrato">Precio</string>
    <string name="estado">ESTADO</string>
    <string name="pagar_factura">Pagar factura</string>
    <string name="domiciliar_pago">Domiciliar pago</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="cerrar">Cerrar</string>
    <string name="pol_tica_de_privacidad">Política de Privacidad</string>
    <string name="actualizar_perfil">Actualizar perfil</string>
    <string name="cambiar_plan">Cambiar plan</string>
    <string name="condiciones_legales">Condiciones legales</string>
    <string name="limpiar_firma">Limpiar firma</string>
    <string name="firmar_y_enviar">Firmar y enviar</string>
    <string name="no_tienes_contratos_firmados_a_n">No tienes contratos firmados aún.</string>
    <string name="selecciona_tu_plan">Selecciona tu plan</string>
    <string name="gratuito">Gratuito</string>
    <string name="premium_acceso_completo">Premium (acceso completo)</string>
    <string name="encuentra_empresas_de_transporte_para_tus_traslados">Encuentra empresas de transporte para tus traslados</string>
    <string name="introduce_tu_ciudad">Introduce tu ciudad</string>
    <string name="buscar">Buscar</string>
    <string name="asunto">Asunto</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="nuevo_nombre">Nuevo nombre</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="cancelarCambios">Cancelar</string>
</resources>