<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/detalle_ciudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciudad"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detalle_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripci_n"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/detalle_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:textColor="#2962FF"
        android:textStyle="bold"
        android:layout_marginTop="4dp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/imagenes_pager"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/boton_alquilar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservar_trastero"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/boton_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar" />
    </LinearLayout>

</LinearLayout>
