<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_asunto"
        android:hint="@string/asunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_mensaje"
        android:hint="@string/mensaje"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/boton_enviar"
        android:text="@string/enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />
</LinearLayout>
